--- a/Projekat/WebP/WebContent/home.html
+++ b/Projekat/WebP/WebContent/home.html
@@ -20,12 +20,11 @@
 			<div id="sign"></div>
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
 			<div id="search">
-				<span>Search videos by: </span><br> <input type="checkbox"
-					id="cbTitle" name="title" value="title">Title <input
-					type="checkbox" id="cbUser" name="user" value="user" checked>User
-				<input type="checkbox" id="cbComment" name="comment" value="comment"
-					checked>Comment <input type="submit" value="Search"
-					id="searchbtn">
+				<span>Search videos by: </span><br> 
+				<input type="checkbox" id="cbTitle" name="title" value="title">Title 
+				<input type="checkbox" id="cbUser" name="user" value="user" checked>User
+				<input type="checkbox" id="cbComment" name="comment" value="comment" checked>Comment 
+				<input type="submit" value="Search" id="searchbtn">
 			</div>
 
 			<div class="searchbar">
