--- a/Projekat/WebP/WebContent/video.html
+++ b/Projekat/WebP/WebContent/video.html
@@ -45,12 +45,13 @@
 
 			<span id="saStrane">
 			<div class="details">
-				<h1>100 Years of Kitten Beauty in 60 Seconds</h1>
+				<h1>unknown</h1>
 				<!-- <div id="published">Published on <span id="date">10.02.2016.</span> by <a href="profile.html" id="user"><b>username</b></a></div> -->
-				<span id="views">1000 views</span>
-				<span id="brojLajkova">34</span><a href="#" id="like"><i class="material-icons">thumb_up</i></a>
-				<a href="#" id="dislike"><i class="material-icons">thumb_down</i></a><span id="brojDislajkova">12</span>
-				<p id="opisVidea">Also, every time you leave a comment, a kitten happily purrs itself to sleep.  Let us know what you like, or even love, in the comments below.  We want to hear from you! Let us know what you like, or even love, in the comments below. We want to hear every time you leave a comment, a kitten happily purrs itself to sleep.</p>
+				<span id="views">views</span>
+				<div id="rejtovanje">
+				<span id="brojLajkova">0</span><a href="#" id="like"><i class="material-icons">thumb_up</i></a>
+				<a href="#" id="dislike"><i class="material-icons">thumb_down</i></a><span id="brojDislajkova">0</span></div>
+				<p id="opisVidea">unknown</p>
 				<!-- <button id="stop">Stop</button>
 				<button id="pause">Pause</button>
 				<button id="play">Play</button> -->
