--- a/Projekat/WebP/WebContent/search.html
+++ b/Projekat/WebP/WebContent/search.html
@@ -40,8 +40,8 @@
 	<div id="slika">
 		<div class="container">
 			<div id="filteri">
-				<button id="sort"><i class="material-icons">sort</i>Sort by</button>
-				<button id="filter"><i class="material-icons">filter_list</i>Filter</button>
+			<!-- 	<button id="sort"><i class="material-icons">sort</i>Sort by</button>
+				<button id="filter"><i class="material-icons">filter_list</i>Filter</button> -->
 			</div>
 			<div id="videos">
 				<div id="searched">
